<resources>
    <string name="app_name">Book A Ground</string>


    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="resend_password">RESEND PASSWORD</string>
    <string name="log_in_using_phoneNumber">Log In Using Phone Number</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="create_new_account">Don\'t have an account? "<b>"Create one!"</b>"</string>
    <string name="enter_fullName">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_up_using_phoneNumber">Sign Up Using Phone Number</string>
    <string name="reset_password">RESET PASSWORD</string>


    <string name="public_rating">%1$s Ratings</string>
    <string name="title_activity_venue_details">VenueDetailsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_venue_map">Map</string>
    <string name="select_gender">Select Gender</string>

    <string-array name="bookingTimeSlots">
        <item>5 AM</item>
        <item>6 AM</item>
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>
        <item>12 PM</item>
    </string-array>
</resources>
