<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.android.shiyas.bookaground.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/log_in_using_phoneNumber"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="14sp"
                android:hint="@string/enter_phone_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textSize="14sp"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/login"
            android:onClick="login"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:layout_gravity="center_horizontal"
            android:onClick="forgotPassword"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textStyle="bold" />

    </LinearLayout>



    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="createNewAccount"
        android:text="@string/create_new_account"
        android:textStyle="bold" />

</RelativeLayout>
